fix toast (make clickable), z-index update, try to destroy component within component

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,6 +6,7 @@ app-toast {
   display: flex;
   flex-direction: column-reverse;
   align-items: flex-end;
+  z-index: 2;
 
   position: fixed;
   bottom: 10px;
